# kantorotanium

./: .gitignore  README.md  kantorotanium.py  ore_50pctbase_554_4pctimplant.csv  ore_58pctbase_555_rx804.json  pyproject.toml  setup.py
kantorotanium/: __init__.py  __main__.py  import.py
kantorotanium/data_files/: ore.cerlestes.de.dump.json  ore_50pctbase_554_4pctimplant.csv  ore_58pctbase_555_rx804.json
tests/: test_kantorotanium.py
