[tool.poetry]
name = "kantorotanium"
version = "0.0.1"
description = "Eve Online: optimize compressed ore purchases"
authors = ["Chris Danis <cdanis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.dev-dependencies]
pytest = "^4.6"
dataclasses-json = "^0.5.1"
logzero = "^1.5"
ortools = "^7.6"
requests = "^2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
kantorotanium = 'kantorotanium.__main__:main'