[tool.poetry]
name = "kantorotanium"
version = "0.0.1"
description = "Eve Online: optimize compressed ore purchases"
authors = ["Chris Danis <cdanis@gmail.com>"]
include = ["ore_50pctbase_554_4pctimplant.csv", "ore_58pctbase_555_rx804.json"]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
more-itertools = "^8.6.0"
ortools = "^9.6.2534"
logzero = "^1.7.0"
requests = "^2.31.0"
dataclasses-json = "^0.5.7"


[tool.poetry.dev-dependencies]
pytest = "^4.6"
dataclasses-json = "^0.5.1"
logzero = "^1.5"
ortools = "^9.6"
requests = "^2"
bpython = "^0.20"

[tool.poetry.group.dev.dependencies]
poetry2setup = "^1.1.0"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
kantorotanium = 'kantorotanium.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

